变更岗位状态接口
